<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#724B9C95"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".Fragments.Profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="#808080"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:src="@drawable/background_image_one_signup" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#6A20594D"
                android:layout_marginTop="10dp"
                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="10dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginLeft="10dp"
                    app:helperText="Full Name"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/regular_font"
                        android:padding="10dp"
                        android:text="Handy"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#6A20594D"
                android:layout_marginTop="10dp"

                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="10dp"
                >
                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginLeft="10dp"
                    app:helperText="Phone number"
                    >

                    <TextView
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/regular_font"
                        android:padding="10dp"
                        android:text="9818780177"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#6A20594D"
                android:layout_marginTop="10dp"

                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="10dp"
                >
                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginLeft="10dp"
                    app:helperText="Username"
                    >

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/regular_font"
                        android:padding="10dp"
                        android:text="Handy"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:src="@drawable/person"
                android:id="@+id/update"
                android:layout_gravity="end" />


        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_margin="10dp"
            android:id="@+id/rv"/>
    </LinearLayout>

</ScrollView>