<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED287B8E"
    tools:context=".Fragments.Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/main_font"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageView
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:id="@+id/profile"
            android:layout_marginTop="20dp"
            android:src="@drawable/vector"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Click Image to Upload"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person"
                android:layout_margin="4dp"
                android:padding="10dp"
                >

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name"
                android:id="@+id/name"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:fontFamily="@font/main_font"
                android:padding="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_margin="4dp"
                android:padding="10dp"
                >

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="+977 9XXXXXXXXXX"
                android:layout_margin="4dp"
                android:id="@+id/phone"
                android:inputType="number"
                android:background="@color/white"
                android:fontFamily="@font/main_font"
                android:padding="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person"
                android:layout_margin="4dp"
                android:padding="10dp"
                >

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:id="@+id/username"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:fontFamily="@font/main_font"
                android:padding="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/edt">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_margin="4dp"
                android:padding="10dp"
                >

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:fontFamily="@font/main_font"
                android:padding="10dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/edt">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_margin="4dp"
                android:padding="10dp"
                >

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:id="@+id/cpassword"
                android:inputType="textPassword"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:fontFamily="@font/main_font"
                android:padding="10dp"/>


        </LinearLayout>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Register"
            android:textColor="@color/white"
            android:background="#0F770B"
            android:padding="20dp"
            android:id="@+id/register"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>


</ScrollView>