<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:elevation="@dimen/cardview_compat_inset_shadow"
    app:cardElevation="@dimen/cardview_compat_inset_shadow"
    android:layout_margin="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
       <Spinner
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/spinner"

           android:layout_alignParentStart="true"
           android:background="#F1F1F1"
           android:padding="20dp"
           android:layout_margin="10dp"
           />
        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Answer To Selecred Question"
            android:padding="10dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="Next"
            android:id="@+id/next"
            android:layout_margin="10dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>


</RelativeLayout>